// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el component con  el nombre del producto 1`] = `
<span
  className="productDescription "
>
  Custom Product
</span>
`;

exports[`ProductTitle debe de mostrar el component con  el nombre del producto 2`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription "
  >
    Coffe Mug
  </span>
</div>
`;
